--- a/my-app/src/app/app.component.html
+++ b/my-app/src/app/app.component.html
@@ -37,16 +37,16 @@
 
 
 <!-----1st trailsssss-->
- <div class="aa">
+ <!-- <div class="aa">
     <h1>My first: {{title}} </h1>
 </div>
 <div class="wrapper">  
     <app-container></app-container> 
-</div> 
+</div>  -->
 
 
 <!----------------------2nd trailsss------------------>
- <!-- <div class="wrapper">
+ <div class="wrapper">
     <div class="container ">
         <div class="row">
             <div class="col-6">
@@ -57,4 +57,4 @@
             </div>
         </div>
     </div>
-</div>   -->
+</div>  
